# IterSHAP

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
examples/: breast_cancer.ipynb  deap.ipynb  ecg.ipynb  eeg.ipynb  feature_extraction.m  former_deap.ipynb  make_classification.ipynb  simulation_setup.ipynb  synthesised_data.ipynb
itershap/: __init__.py  itershap.py
