[tool.poetry]
name = "IterSHAP"
version = "0.0.3"
description = "Iterative feature selection method using SHAP values"
readme = "README.md"
license = "MIT"
authors = [
    "Frank van Mourik <f.g.vanmourik@student.utwente.nl>",
]
keywords = ["SHAP", "Feature Selection", "Explainable AI", "XAI", "Small datasets"]
homepage = "https://github.com/FrankvanMourik/IterSHAP"
repository = "https://github.com/FrankvanMourik/IterSHAP"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
shap = "^0.40.0"
